@@ -1,22 +1,24 @@
 package com.cs.quizeloper.quiz.service;
 
-import com.cs.quizeloper.global.resolver.UserInfo;
 import com.cs.quizeloper.quiz.Repository.QuizLikeRepository;
 import com.cs.quizeloper.quiz.Repository.QuizRepository;
 import com.cs.quizeloper.quiz.entity.*;
 import com.cs.quizeloper.quiz.model.GetQuizRes;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 import static com.cs.quizeloper.global.entity.BaseStatus.ACTIVE;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class QuizService {
@@ -27,15 +29,33 @@ public class QuizService {
     @Transactional
     public Page<GetQuizRes> getQuizList(Long userId, PageRequest pageRequest) {
         Page<Quiz> pagingQuiz = quizRepository.findAllByStatus(ACTIVE, pageRequest);
-        Page<Long> quizLikes = quizLikeRepository.findAllByUserAndStatus(userId, ACTIVE, pageRequest);
-
-        List<String> quizString = getQuizUnitList(pagingQuiz.getContent());
+        List<Long> quizLikes = quizLikeRepository.findAllByUserIdAndStatus(userId, ACTIVE);
 
         List<GetQuizRes> quizResList = pagingQuiz.getContent().stream()
-                .map(quiz -> new GetQuizRes(quiz.getId(), quiz.getTitle(), quiz.getType(), quiz.getStackUnit(), quizString,
-                        checkUserLikesQuiz(quizLikes.toList(), quiz)))
+                .map(quiz -> new GetQuizRes(quiz.getId(), quiz.getTitle(), quiz.getType(), quiz.getStackUnit(), getQuizUnitList(quiz),
+                        checkUserLikesQuiz(quizLikes, quiz)))
                 .collect(Collectors.toList());
         return new PageImpl<>(quizResList, pageRequest, pagingQuiz.getTotalElements());
+    }
+
+    // 조건별 퀴즈 전체 목록 조회
+    public Page<GetQuizRes> getFilteredQuizList(Long userId, String stack, String quizType, PageRequest pageRequest, Long ... range) {
+        Page<Quiz> pagingFilteredQuiz;
+        Optional<QuizType> quizTypeOptional = Optional.ofNullable(quizType).map(q -> QuizType.valueOf(q.toUpperCase()));
+
+        if (range == null || range.length == 0){
+            pagingFilteredQuiz = quizRepository.findAllByStackAndQuizTypeIsNull(pageRequest, Stack.valueOf(stack.toUpperCase()), quizTypeOptional.orElse(null));
+        }
+        else{
+            pagingFilteredQuiz = quizRepository.findAllByStackAndQuizUnitIsNullAndQuizTypeIsNull(pageRequest, Stack.valueOf(stack.toUpperCase()), quizTypeOptional.orElse(null), range);
+        }
+        List<Long> quizLikes = quizLikeRepository.findAllByUserIdAndStatus(userId, ACTIVE);
+
+        List<GetQuizRes> quizResList = pagingFilteredQuiz.getContent().stream()
+                .map(quiz -> new GetQuizRes(quiz.getId(), quiz.getTitle(), quiz.getType(), quiz.getStackUnit(), getQuizUnitList(quiz),
+                        checkUserLikesQuiz(quizLikes, quiz)))
+                .toList();
+        return new PageImpl<>(quizResList, pageRequest, pagingFilteredQuiz.getTotalElements());
     }
 
     // 퀴즈 좋아요 확인 여부
@@ -44,10 +64,9 @@ public class QuizService {
     }
 
     // 퀴즈 문제 유형 반환
-    private List<String> getQuizUnitList(List<Quiz> quizList){
-        return quizList.stream()
-                .flatMap(quiz -> quiz.getQuizUnitList().stream().map(QuizUnitList::getQuizUnit))
-                .map(quizUnit -> String.valueOf(quizUnit.getUnit()))
-                .collect(Collectors.toList());
+    private List<String> getQuizUnitList(Quiz quiz){
+        return quiz.getQuizUnitList().stream()
+                .map(quizUnitList -> quizUnitList.getQuizUnit().getUnit())
+                .toList();
     }
 }
